Increase z-index on header to prevent tooltip asterisks from showing over

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -31,6 +31,7 @@ header {
   background-color: #001;
   height: $full-header-height;
   width: 100%;
+  z-index: 2;
 
   h1 {
     position: absolute;
